# magnetron

./: .gitignore  README.md  pyproject.toml
benchmark/python/: bench.py  bench_square_matmul.py  bench_tool.py  fill_op.py  gemm_mag.py  gemv_nt_mag.py  gemv_nt_torch.py  unary_op.py
cmake/: arch.cmake
docs/: Magnetron-Cheatsheet.md
examples/ae/: main.py
examples/qwen3/: convert_dataset.py  inference.py  main.py  model.py  server.py
examples/xor/: main.py
include/magnetron/: magnetron.h
magnetron/bindings/: _module.cpp  context.cpp  dtype.cpp  prelude.cpp  prelude.hpp  snapshot.cpp  tensor_class.cpp  tensor_factories.cpp  tensor_operators.cpp  tensor_special.cpp
magnetron/core/: CMakeLists.txt  mag_alloc.c  mag_autodiff.c  mag_autodiff.h  mag_backend.c  mag_backend.h  mag_bfloat16.h  mag_context.c  mag_context.h  mag_coords.c  mag_coords.h  mag_coords_iter.h  mag_cpuid.c  mag_cpuid.h  mag_def.c  mag_def.h  mag_dtype.c  mag_dylib.c  mag_fastdivmod.c  mag_fastdivmod.h  mag_float16.h  mag_float8_e4m3fn.h  mag_fmt.c  mag_fmt.h  mag_gradients.c  mag_hash.c  mag_hashset.c  mag_hashset.h  mag_io_audio.c  mag_io_image.c  mag_io_snapshot.c  mag_machine.c  mag_machine.h  mag_mmap.c  mag_mmap.h  mag_op_attr.h  mag_op_stubs.c  mag_operator.c  mag_operator.h  mag_os.c  (+18 more)
magnetron/cpu/: CMakeLists.txt  mag_cpu.c  mag_cpu.h  mag_cpu_autotune.c  mag_cpu_autotune.h  mag_cpu_fallback.c  mag_cpu_kernel_data.h  mag_cpu_numa.c  mag_cpu_numa.h  mag_cpu_phase_fence.c  mag_cpu_phase_fence.h  mag_cpu_specialization_detector.c  mag_cpu_specialization_detector.h  mag_cpu_threadpool.c  mag_cpu_threadpool.h  mag_cpu_tls_arena.c  mag_cpu_tls_arena.h
magnetron/cpu/amd64/: mag_cpu_amd64_alderlake.c  mag_cpu_amd64_arrowlake.c  mag_cpu_amd64_cannonlake.c  mag_cpu_amd64_cascadelake.c  mag_cpu_amd64_cooperlake.c  mag_cpu_amd64_core2.c  mag_cpu_amd64_haswell.c  mag_cpu_amd64_icelake.c  mag_cpu_amd64_ivybridge.c  mag_cpu_amd64_nehalem.c  mag_cpu_amd64_sandybridge.c  mag_cpu_amd64_sapphirerapids.c  mag_cpu_amd64_sierraforest.c  mag_cpu_amd64_skylake_avx512.c  (+7 more)
magnetron/cuda/: CMakeLists.txt  mag_cuda.cu  mag_cuda.cuh  mag_cuda_binary.cu  mag_cuda_binary.cuh  mag_cuda_fill.cu  mag_cuda_fill.cuh  mag_cuda_matmul.cu  mag_cuda_matmul.cuh  mag_cuda_misc.cu  mag_cuda_misc.cuh  mag_cuda_reduction.cu  mag_cuda_reduction.cuh  mag_cuda_unary.cu  mag_cuda_unary.cuh
scripts/: benchmark-cuda.sh  benchmark-nsight-gemm.sh  benchmark-nsight-gemv-nt.sh  py-profile-instrument.sh  py-profile-pyspy.sh
test/cpp/: magnetron.hpp
test/python/: common.py  test_state_dict.py  test_tensor.py
(+37 files in other folders)
