[build-system]
requires = [
    "scikit-build-core"
]
build-backend = "scikit_build_core.build"

[project]
name = "magnetron"
version = "0.1.7"
description = "A compact machine learning runtime for developers who want to understand, control, and optimize the full stack."
requires-python = ">=3.10"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Mario Sieg", email = "mario.sieg.64@gmail.com" }]
dependencies = []
keywords = [
    "machine-learning",
    "deep-learning",
    "neural-networks",
    "gpu",
    "simd",
]

[urls]
Homepage = "https://github.com/MarioSieg/magnetron"
Source = "https://github.com/MarioSieg/magnetron"
Issues = "https://github.com/MarioSieg/magnetron/issues"

[project.optional-dependencies]
examples = [
    "tokenizers",
    "rich",
    "matplotlib",
    "huggingface_hub"
]

dev = [
    "ruff",
    "torch",
    "numpy",
    "transformers",
    "tiktoken",
    "matplotlib",
    "pytest",
    "pytest-xdist",
    "pyinstrument",
    "line_profiler",
    "rich",
    "tokenizers",
    "huggingface_hub",
]

[tool.scikit-build.cmake.define]
# Enable / disable backends
MAGNETRON_ENABLE_BACKEND_CPU = true
MAGNETRON_ENABLE_BACKEND_CUDA = true

# Enable / disable features
MAGNETRON_BUILD_PYTHON_BINDINGS = true # Required for the Python package
MAGNETRON_DEBUG = false
MAGNETRON_BUILD_TESTS = false
MAGNETRON_BUILD_BENCHMARKS = false

[tool.scikit-build]
wheel.packages = ["python/magnetron"]
editable.mode = "redirect"
install.components = ["python"]
build-dir = "build/{wheel_tag}"

[tool.ruff]
line-length = 150
exclude = [
    ".venv",
    "docs",
    "extern",
    "test",
    "tools",
    "fuzzer",
    "cmake",
    "bin",
]

[tool.ruff.lint]
ignore = ["F403"]
select = [
    "ANN",
    "UP"
]

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint.per-file-ignores]
"setup.py" = ["ANN"]
